@@ -1,9 +1,6 @@
 plugins {
     id 'java'
-}
-
-repositories {
-    mavenCentral()
+    id 'maven-publish'
 }
 
 dependencies {
@@ -23,14 +20,53 @@ tasks.withType(JavaCompile).configureEach {
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
             '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
     ]
 }
 
-java {
-    targetCompatibility = JavaVersion.VERSION_21
-    sourceCompatibility = JavaVersion.VERSION_21
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+tasks.named("publish") {
+    dependsOn(build)
+}
+
+//java {
+//    withSourcesJar()
+//    withJavadocJar()
+//}
+
+
+publishing {
+    repositories {
+        maven {
+            credentials(org.gradle.api.credentials.PasswordCredentials.class)
+            name = "StaticStudios"
+            setUrl("https://repo.staticstudios.net/private/")
+        }
+    }
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            artifactId = 'static-data-processor'
+            pom {
+                name = 'Static Data Processor'
+                description = 'Compile-time generator for Static Data.'
+                url = 'https://github.com/StaticStudios/static-data'
+                developers {
+                    developer {
+                        id = 'staticstudios'
+                        name = 'Static Studios'
+                        email = 'support@staticstudios.net'
+                    }
+                }
+                scm {
+                    connection = 'scm:git:git://github.com/StaticStudios/static-data.git'
+                    developerConnection = 'scm:git:ssh://github.com:StaticStudios/static-data.git'
+                    url = 'https://github.com/StaticStudios/static-data'
+                }
+            }
+        }
     }
 }
+
